# stock_ticker_service

./: Cargo.toml  readme.md
api/: Cargo.toml
api/src/: main.rs
api/src/actors/: mod.rs  socket_session.rs  stock_engine.rs  user_store.rs
api/src/messages/: mod.rs
api/src/state/: mod.rs
static/: websocket.html
stock/: Cargo.toml
stock/src/: lib.rs  utils.rs
ticker/: Cargo.toml
ticker/src/: lib.rs
