[package]
edition = "2018"
name = "api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
env_logger = "0.8"
futures = "0.3"
rand = "0.7"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
stock = {path = "../stock"}

[dev-dependencies]
actix-rt = "1"
